2000-05-28  Dan Winship  <danw@helixcode.com>

	* camel-provider.h: Add a domain field to CamelProvider, to say
	what kind of data it provides.

	* providers/imap/camel-imap-provider.c: 
	* providers/mbox/camel-mbox-provider.c: 
	* providers/pop3/camel-pop3-provider.c: 
	* providers/sendmail/camel-sendmail-provider.c: 
	* providers/smtp/camel-smtp-provider.c: Set domain to "mail".

	* providers/nntp/camel-nntp-provider.c: Set domain to "news".

	* providers/vee/camel-vee-provider.c: Set domain to "vfolder". (So
	it doesn't end up being listed as a potential mail source in the
	mail config wizard.)

	* providers/pop3/camel-pop3-store.c: Split apart password and APOP
	auth, since some servers seem to do both, but don't really.
	(connect_to_server): Renamed from try_connect. Now actually does
	the connection up to the point of checking the greeting for APOP
	support.
	(query_auth_types): Return APOP, if appropriate. Call
	pop3_disconnect after connect_to_server since we don't really want
	to be connected.
	(pop3_connect): Use connect_to_server rather than duplicating
	code. Fix a one-byte buffer overrun in the APOP code.
	(pop3_disconnect): Make this able to clean up after a partial
	connect.
	(connect_to_server): Remove port number from error message since
	it's not terribly useful and we were getting it from the wrong
	place anyway.

	* camel-mime-utils.c (header_address_list_format_append): Use
	`foo@bar' rather than `"" <foo@bar>' for email addresses with no
	name component.

2000-05-27  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-store.c: Removed 
	camel_imap_command_get_additional_data() as it was
	completely useless, replaced with 
	camel_imap_command_extended() which may eventually replace
	camel_imap_command() as well.

	* providers/imap/camel-imap-store.h: Modified to reflect
	changes made to camel-imap-store.c

	* providers/imap/camel-imap-folder.c: Wrote the first of many
	methods: camel_imap_init(), imap_open(), imap_expunge(), 